<resources>
    <string name="app_name">Our Moments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="first_image">First Image</string>
    <string name="second_image">Second Image</string>
    <string name="merged_image">Merged Image</string>
    <string name="choose_images">Choose Images</string>
    <string name="clear_all_images">Clear All Images</string>
    <string name="big_image">Big Image</string>
    <string name="take_a_picture">Take A Picture</string>
    <string name="choose_from_album">Choose From Album</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="merge_images">Merge Images</string>
    <string name="share_image">Share Image</string>
    <string name="transform">Transform</string>
    <string name="swap">Swap</string>
    <string name="save">Save</string>
    <string name="send_to">Send to</string>
    <string name="logout_title">Logout Confirm</string>
    <string name="logout_message">Are you sure to logout?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="settings">Settings</string>
    <string name="about">About Our Moments</string>
    <string name="application_icon">Application Icon</string>
    <string name="version">Our Moments 1.0</string>
    <string name="author">Heshan Qiu</string>
    <string name="institute">Whitireia Community Polytechnic</string>
    <string name="copyright">Copyright © 2019 heshan.chiu@gmail.com\nAll Rights Reserved</string>
    <string name="moments">Moments</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="author_email">heshan.qiu@gmail.com</string>
</resources>
