<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.about.AboutFragment">

    <ImageView
        android:id="@+id/ivAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/application_icon"
        android:src="@mipmap/ic_launcher_round"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/author"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvInstitute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/institute"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/copyright"
        android:textAlignment="center" />

</LinearLayout>
